2004-04-29  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Set AVR_LIBC_USER_MANUAL with version number appended
	only if versioned docs are requested (that's the default).

2004-04-28  Theodore A. Roth  <troth@openavr.org>

	* include/avr/eeprom.h (eeprom_rb): Remove deprecated interface.
	(eeprom_rw): Ditto.
	(eeprom_wb): Ditto.
	(_EEPUT): Use eeprom_write_byte() directly instead of eeprom_wb().
	(_EEGET): Use eeprom_read_byte() directly instead of eeprom_rb().
	* include/avr/pgmspace.h (PRG_RDB): Remove deprecated interface.
	* include/avr/sfr_defs.h (cbi): Ditto.
	(sbi): Ditto.
	(inb): Ditto.
	(outb): Ditto.
	(inw): Ditto.
	(outw): Ditto.
	(outp): Ditto.
	(inp): Ditto.
	(BV): Ditto.

2004-04-28  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/eeprom.h: Remove deprecated file.
	* include/ina90.h: Ditto.
	* include/interrupt.h: Ditto.
	* include/io.h: Ditto.
	* include/pgmspace.h: Ditto.
	* include/progmem.h: Ditto.
	* include/sig-avr.h: Ditto.
	* include/twi.h: Ditto.
	* include/wdt.h: Ditto.

2004-04-27  Theodore A. Roth  <troth@openavr.org>

	* configure.in: Fix typo when adding crtm168.o to AVR_CRT_MEGA.

2004-04-27  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AM_INIT_AUTOMAKE): Bump version.
	* include/avr/iocan128.h (RAMPZ): Define.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* configure.in:
	* crt1/Makefile.am:
	* include/avr/io.h:
	Add support infrastructure for mega48, mega88, mega168, tiny13,
	tiny2313 and at90can128.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* configure.in (AVR_LIBC_USER_MANUAL): Append version number.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iomx8.h: Undefine EECR, EEDR, EEAR, EEARL, and EEARH
	before defining them to avoid conflict with predfined values in
	io.h.

2004-04-23  Theodore A. Roth  <troth@openavr.org>

	* include/avr/iocan128.h (UDR0): Define.

2004-04-23  Theodore A. Roth  <troth@openavr.org>
